--- a/src/Vista/VistaCamionero.form
+++ b/src/Vista/VistaCamionero.form
@@ -43,12 +43,18 @@
                                           <Component id="txtSalario" max="32767" attributes="0"/>
                                           <Component id="txtTelefono" alignment="0" pref="94" max="32767" attributes="0"/>
                                       </Group>
-                                      <Component id="txtDireccion" min="-2" pref="132" max="-2" attributes="0"/>
-                                      <Component id="cbxPoblacion" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="btnAceptar" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
                                           <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                              <Component id="txtIdPoblacion" alignment="0" max="32767" attributes="0"/>
+                                              <Component id="txtDireccion" alignment="0" pref="132" max="32767" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                                          <Component id="btnElegirPoblacion" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -95,11 +101,12 @@
                       <Component id="txtDireccion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
-                      <Component id="cbxPoblacion" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtIdPoblacion" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnElegirPoblacion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="56" max="32767" attributes="0"/>
+                  <EmptySpace pref="53" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnAceptar" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -162,21 +169,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtDireccion">
         </Component>
-        <Component class="javax.swing.JComboBox" name="cbxPoblacion">
-          <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
-              </StringArray>
-            </Property>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-          </AuxValues>
-        </Component>
         <Component class="javax.swing.JButton" name="btnAceptar">
           <Properties>
             <Property name="text" type="java.lang.String" value="ACEPTAR"/>
@@ -189,6 +181,13 @@
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="VistaCamionero_jButton7"/>
           </AuxValues>
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtIdPoblacion">
+        </Component>
+        <Component class="javax.swing.JButton" name="btnElegirPoblacion">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="ELEGIR"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
