--- a/src/Vista/VistaPrincipal.form
+++ b/src/Vista/VistaPrincipal.form
@@ -56,7 +56,7 @@
     <Property name="useNullLayout" type="boolean" value="false"/>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JDesktopPane" name="desktopMain">
+    <Container class="javax.swing.JDesktopPane" name="escritorio">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="0" y="30" width="820" height="430"/>
